Rename password to password_hash in registration form

--- a/flask_app/app/templates/registration/registration.html
+++ b/flask_app/app/templates/registration/registration.html
@@ -85,7 +85,8 @@
                         placeholder="Let us know how we can help you" required -->
                 </div>
                 <div class="form-group">
-                    {{ form.password2.label(class='form-control-label block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300') }}
+                    {{ form.password2.label(class='form-control-label block mb-2 text-sm font-medium text-gray-900
+                    dark:text-gray-300') }}
 
                     <!-- label for="subject"
                         class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Subject</label -->
@@ -98,7 +99,10 @@
                         {% endfor %}
                     </div>
                     {% else %}
-                    {{ form.password2(class='form-control form-control-lg block p-3 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light') }}
+                    {{ form.password2(class='form-control form-control-lg block p-3 w-full text-sm text-gray-900
+                    bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-primary-500
+                    focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400
+                    dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light') }}
                     {% endif %}
 
                     <!-- input type="text" id="subject"
