--- a/flask_app/app/templates/ORIGINAL_navbar.html
+++ b/flask_app/app/templates/ORIGINAL_navbar.html
@@ -6,8 +6,8 @@
             {% if current_user.is_authenticated %}
             <li> <a class="nav-link" href="{{ url_for('auth.profile', user_id=current_user.id) }}">{{
                     current_user.username}}</a></li>
-            <li><a class="nav-link" href={{ url_for('game.menu') }}>New Game</a></li>
-            <li> <a class="nav-link" href={{ url_for('game.join_game') }}>Join Game</a></li>
+            <!-- <li><a class="nav-link" href={{ url_for('game.menu') }}>New Game</a></li>
+            <li> <a class="nav-link" href={{ url_for('game.join_game') }}>Join Game</a></li> -->
             <li> <a class="nav-link" href={{ url_for('logout.logout') }}>Logout</a></li>
             {% else %}
             <li> <a class="nav-link" href="{{ url_for('registration.registration') }}">Registration</a></li>
