--- a/flask_app/app/templates/profiles/view_profile.html
+++ b/flask_app/app/templates/profiles/view_profile.html
@@ -1,16 +1,11 @@
 {% extends 'base.html' %}
 
-{% block css%}
-    {% assets "profile_scss" %}
-    <link rel=stylesheet type=text/css href="{{ ASSET_URL }}">
-    {% endassets %}
-{% endblock %}
-
-{% block body %}
+{% block content %}
     <div class="container">
         <div class="content">
-           <h1>Hello {{user.username}}</h1> 
-           <h2>pending games</h2>
+           <h1>Hello {{profile.profilename}}</h1> 
+           <h2>Pending Games</h2>
+           <!--
            <ul class="game_list">
                {% for game in user.games %}
                     {% if game.status == 'STATUS_ACTIVE' %}
@@ -40,6 +35,7 @@
                     {% endif %}
                {% endfor %}
            </ul>
+           -->
         </div>
         
     </div>
