--- a/flask_app/app/templates/navbar.html
+++ b/flask_app/app/templates/navbar.html
@@ -30,7 +30,7 @@
                 </li>
                 {% if current_user.is_authenticated %}
                 <li>
-                    <a href="{{ url_for('profile.view_profile', user_id=current_user.id) }}">{{ current_user.username }}</a>
+                    <a href="{{ url_for('profile.view_profile', profile_id=current_user.id) }}">{{ current_user.username }}</a>
                 </li>
                 <li>
                     <a href="{{ url_for('game.menu') }}"
